syntax = "proto3";

package protobuf;

option go_package="/pb/auctions_run_service";



message SuggestPriceRequest {
    int64 UserID = 1;
    string AuctionID = 2;
    string ProductID = 3;
    int64 NewPrice = 4;
};

message SuggestPriceResponse {
    int32 status = 1;
    string Error = 2;
};

message GetCurrentPriceRequest {
    string AuctionID = 1;
    string ProductID = 2;
};

message GetCurrentPriceResponse {
    string Username = 1;
    string Price = 2;
};

service AuctionsRunService {
    rpc SuggestPrice (SuggestPriceRequest) returns (SuggestPriceResponse) {};

    rpc GetCurrentPrice (GetCurrentPriceRequest) returns (stream GetCurrentPriceResponse) {};
}; 